--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -968,6 +968,6 @@ Backup.preference.ftp.port.tooltip=Geben Sie hier die Portnummer ein
 
 #---------------------------------
 # New dialogs when an update is available but can't be installed (yapbam installatio directory is write protected).
-MainMenu.CheckUpdate.Success.systemProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is protected by the system (maybe windows UAC ?).<br><br>You''ll have to install this update manually using the installer.<br><br>This installer and the release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.writeProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is write protected.<br><br>The new version and its release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.openSite=Open Yapbam's web site
+MainMenu.CheckUpdate.Success.systemProtected=<html>Ihre Version: <B>{0}</B><BR>Aktuelle Version: <B>{1}</B><BR><BR>Yapbam kann nicht aktualisiert werden, weil das Installationsverzeichnis vom System gesch\u00fctzt wird (evtl. Windows UAC ?).<br><br>Sie m\u00fcssen dieses Update manuell mit dem Installationsprogramm installieren.<br><br>Dieses und die Release Notes sind verf\u00fcgbar unter <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.writeProtected=<html>Ihre Version: <B>{0}</B><BR>Aktuelle Version: <B>{1}</B><BR><BR>Yapbam kann nicht aktualisiert werden, weil das Installationsverzeichnis schreibgesch\u00fctzt ist.<br><br>Die neue Version und die Release Notes sind verf\u00fcgbar unter <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.openSite=Yapbam Webseite \u00f6ffnen
