--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -3,7 +3,13 @@ version	next
 known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 improvement
+	Ajout d'un nouveau dialogue permettant la saisie de transferts entre comptes.
 	Yapbam peut effectuer automatiquement la sauvegarde de vos données sur un disque ou sur un serveur via ftp.
+
+version	0.10.1 (02/04/2012)
+fix
+	Supprime le panneau de préférence des sauvegardes automatiques (qui sont encore en cours de développement).
+	La validation des préférences d'édition des opérations provoquait une erreur lorsque le champ "Personnalisé" contenait un format incorrect.
 
 version	0.10.0 (30/03/2012)
 improvement
